force-app/main/default/objects/Uniforms__c/Uniforms__c.object-meta.xml
<CustomObject>
    <label>Uniforms</label>
    <nameField>
        <displayFormat>Uni-{0000}</displayFormat>
        <label>Uniform Order #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Uniforms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>