force-app/main/default/objects/Uniforms__c/fields/Clothing_Item__c.field-meta.xml
<CustomField>
    <fullName>Clothing_Item__c</fullName>
    <label>Clothing Item</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shirt</fullName>
            </value>
            <value>
                <fullName>Pants</fullName>
            </value>
            <value>
                <fullName>Coveralls</fullName>
            </value>
            <value>
                <fullName>Jackets</fullName>
            </value>
            <value>
                <fullName>Polo Shirt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>