force-app/main/default/objects/Uniforms__c/fields/Dispatch_Information__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Information__c</fullName>
    <label>Dispatch Information</label>
    <type>TextArea</type>
</CustomField>